--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
       href="https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Creepster&display=swap"
       rel="stylesheet"
     />
+    <link
+    rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+  />
     <link rel="stylesheet" href="style.css" />
     <title>Speed Game</title>
   </head>
@@ -32,6 +36,16 @@
     </div>
     <button id="play" class="btn">Let's play!</button>
     <button id="stop" class="btn">Please stop!</button>
+    <div class="modal">
+        <div class="modalcontent">
+        <h2 id="modalheader">iuehdr</h2>
+        <p id="modaltext">wfbshjbfhwebgwhb</p>
+        <p id="modalscore">Score: <span class="score">0</span></p>
+        <button id="xButton" class="btn">
+            <span class="material-symbols-outlined"> close </span>
+        </button>
+    </div>
+    </div>
     <script src="main.js"></script>
   </body>
 </html>
