--- a/index.html
+++ b/index.html
@@ -17,9 +17,6 @@
     <title>Clown Game</title>
   </head>
   <body>
-    <audio src="">
-      <a href=""></a>
-    </audio>
     <h1>The Clown Killer</h1>
     <p><a href="https://giphy.com/gifs/creepy-aCRTblAWKJroc">via GIPHY</a></p>
     <img
@@ -52,9 +49,10 @@
       <p id="instmodaltext">
       <ul>
         <lh>The rules are simple:</lh>
-        <li>When you see a clown, stick it with the knife.</li>
+        <li>When you see a clown, stab it with the knife.</li>
         <li>Now you have killed a clown, Congratulations.</li>
-        <li>You get one point per killing.</li>
+        <li>If you fail at stabbing, game over.</li>
+        <li>You get one point per kill.</li>
         <li>If you kill over 15 clowns, you're the clown killer!</li>
       </ul></p>
       <button id="closeButton" class="btn">
