--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
   </head>
   <body>
     <h1>The Clown Killer</h1>
-    <p><a href="https://giphy.com/gifs/creepy-aCRTblAWKJroc">via GIPHY</a></p>
     <img
     src="giphy.webp"
     width="auto"
@@ -69,6 +68,7 @@
     </div>
     </div>
   </div>
+  <p><a href="https://giphy.com/gifs/creepy-aCRTblAWKJroc">GIFs via GIPHY</a></p>
     <script src="main.js"></script>
   </body>
 </html>
